feat(api): add product attribute and value management endpoints with validation